# ChangeLog for dev-java/javatoolkit
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/javatoolkit/ChangeLog,v 1.80 2015/05/27 11:28:08 ago Exp $

  27 May 2015; Agostino Sarubbo <ago@gentoo.org> javatoolkit-0.3.0-r9.ebuild:
  Stable for x86, wrt bug #529560

  18 May 2015; Agostino Sarubbo <ago@gentoo.org> javatoolkit-0.3.0-r9.ebuild:
  Stable for amd64, wrt bug #529560

  17 May 2015; Pacho Ramos <pacho@gentoo.org> javatoolkit-0.3.0-r9.ebuild:
  ppc64 stable wrt bug #529560

  15 May 2015; Pacho Ramos <pacho@gentoo.org> javatoolkit-0.3.0-r9.ebuild:
  ppc stable wrt bug #529560

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> javatoolkit-0.3.0-r9.ebuild:
  Drop old Python implementations

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> javatoolkit-0.3.0-r9.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  02 Aug 2013; Michał Górny <mgorny@gentoo.org> -javatoolkit-0.3.0-r8.ebuild:
  Drop the ebuild using python-distutils-ng. Bug #478112.

  22 Apr 2013; Agostino Sarubbo <ago@gentoo.org> javatoolkit-0.3.0-r6.ebuild:
  Stable for sparc, wrt bug #465240

  18 Apr 2013; Agostino Sarubbo <ago@gentoo.org> javatoolkit-0.3.0-r6.ebuild:
  Stable for ia64, wrt bug #465240

  16 Apr 2013; Michał Górny <mgorny@gentoo.org> javatoolkit-0.3.0-r9.ebuild:
  Fix the use of distutils-r1. Fixes bug #466086.

*javatoolkit-0.3.0-r9 (16 Apr 2013)

  16 Apr 2013; Ralph Sennhauser <sera@gentoo.org> +javatoolkit-0.3.0-r9.ebuild:
  Migrate to distutils-r1.eclass

  05 Feb 2013; Rick Farina <zerochaos@gentoo.org> javatoolkit-0.3.0-r6.ebuild,
  javatoolkit-0.3.0-r8.ebuild:
  adding ~arm

*javatoolkit-0.3.0-r8 (31 Jul 2012)

  31 Jul 2012; Ralph Sennhauser <sera@gentoo.org> -javatoolkit-0.3.0-r7.ebuild,
  +javatoolkit-0.3.0-r8.ebuild:
  Don't quote EPRIFIX, Portage doesn't like it. Thanks to PhobosK
  <phobosk@fastmail.fm>. #429092

*javatoolkit-0.3.0-r7 (31 Jul 2012)
