@@ -4,25 +4,17 @@ Hash: SHA256
 AUX javatoolkit-0.3.0-no-pyxml.patch 1128 SHA256 9f0e285c15a1a477606c61fabc391a8f56656525c7d92f91ae59e289eee7d8a9 SHA512 edb135c6008a24d22bf5116bc73944fddf5a8c44354b80800425457c9c9ee8ef4f55413ca88507c991ed835945bc7d162f6b1b3a30c57fc5f41f278e0c5afe16 WHIRLPOOL b0cc84debd5be1e5abf4daf338b21ca55e6e84be7d59a39beff65c7b1dfc2442eeb5e7a0e28313606981f18e83f5ef38344887a15ce8ecc7a03bbe3bd2ecb62a
 AUX javatoolkit-0.3.0-python2.6.patch 413 SHA256 4128e060d2c3693717c64e443527380f548d663496bb982fe45463e6370d920d SHA512 54df3c263a4b8f42457eb848f3fd79ef83953cfc1069c9229e339a178d2363bdaa636ec11ea49dbf5693c5eafe4d123942bf06f3b77b80b0cd8de2177045952c WHIRLPOOL 6c15e4fff8d0b841ff13dd9d1e38a5e77c41f80db6d0460eb3735f4632953b5ae23030e31da02cde361972468ab939fa2b9aa333f09a5b17c25b8ab5b97eadbd
 DIST javatoolkit-0.3.0.tar.bz2 16823 SHA256 47bf8aad2ec58b2d850e8cbe57fe2707859d800b215b24387c7652a50353677c SHA512 e7bbe04e39ab277d0aab89f0eea963c4b0341a336660dab08bfad0510ad1b2b49ce7410a2363bcf9ebad5f8757ee254ddc27af642b4bfb374db52d82cf02c3b1 WHIRLPOOL a9b1034939a0e22c49620bb29d3652e8f5e6a8e71645556fe00463aabc0c1ff2ac2b666f59fd0ceea8ea5dc18579d90cc11a07ba341028831e3b8dd1e8a0e9ce
-EBUILD javatoolkit-0.3.0-r4.ebuild 816 SHA256 f0b8fceacc3545e6540d27aed9128690f4647a9f9edb6a553e4560a8ab19a6f5 SHA512 2a3f5a5337b031d80a4c523f6a6c0c9dd204b5f3b4fe4d75270c7319e27c8a341109cb36a4991e9db3c4c841ca3c8e2213d8d8fd82c4913216207ff8517fe7cd WHIRLPOOL 6b9d5a7b445c2730eaf8a72db9725b74b78a6e9b1ba550620f27a7dc7a45ab6c141bd2777a287fbed6408926465c3e135c9b67cf071060ab37693cd3a77648b4
-EBUILD javatoolkit-0.3.0-r6.ebuild 949 SHA256 2d332a93d9cf82f0f0f7abf70ebfc50d5762113eced2eae342c458f94fcecff3 SHA512 48bee30905c9a5816942c7d274ceecd960e2482845e75716e84dbcc7ceb2501aad38cac9eb7319831e23bcf35c9414c01e2ee187d2d79b2c11c865f696a73e0d WHIRLPOOL 95d742b9db436f9e73d8dbb88bbadcffdc3fb8792333d1754bfd8067ff339b1ba8622d0e7fe7c98294412a02b833cb2b8389c3ad645285cd4636e6efe09fd587
 EBUILD javatoolkit-0.3.0-r9.ebuild 844 SHA256 772f3edf5accb552de08e8f9083d821048184fe9f5ea9700baf5f6f015849924 SHA512 782b1b8f6733f34d9133a39c3152a17276285fd9768feabc81bb41299fdbb75362e991520bd8106db510158da1f1be85a70859f31e808a5fa73bd41ec99876a6 WHIRLPOOL 88eb9bf36a4f9c2c1cb21ce70f5a36286cdd981a275e89c6569b28f4091d72aa9e6a0e1b529bb44ba68345e4633d180df974dfa34817ce2b4c8932d49d996423
-MISC ChangeLog 10994 SHA256 ff355ad67caa926ee8ce2a6755a5143dd2a51db48a94eb399d12333e5885449e SHA512 58c3d910fb71149be4ef044df98fd76306dc4117da604849e36f0388c60db110143b1e2b3ae42a29c866ef0c33800edfc1ecf8e184ddc0b06749176008561f6e WHIRLPOOL 4e3bbdb6a4da9020d515759324eebed1465ad4dfa3bf72453c002e8fca39d578e1d5e627b8c1ae030ca67b936ce53a796bf19853cf711d2be6caed07448e8f8b
+MISC ChangeLog 11131 SHA256 4cc40347ad60ec63daf32992c94b9d7bb96001a93014f2ea229541c333898e67 SHA512 a67d7fa390c92a007cf15d860f3d41de98b5c8441b46c7e12f98ac2c220cb00990f039d00dd4172f870c9badf5a84ccaac2f6edc05dac0d84faab656fe2ec5d1 WHIRLPOOL b34eec24948d08269f4e07366f386add291e7754af4736f62bbca0ac30eb7ff4a4631658472001ebb446dbfcbd8cb74515f940800a83d3167aa29b065e2dfdf5
 MISC metadata.xml 159 SHA256 da2aaa3223c5418688dfbba6f899648c5bcb2e4610126519a1a862913c4f8fa6 SHA512 f5bc77a4e168cdb5a9f9c347f6f437b16bd28978351ec692d4f7e406ba93479424e2272de70fe85d2e0668172de8ccd3aa096f49d5912ed91d17bea11756865b WHIRLPOOL b0cba2d5917cc20d7409ccfedc345ab38c71df76c5c030df578d6db718f8a60dcfc1927c20e7062fafc62e955a90ec9f21cdcef6d7a566fddf374ce766ca64cc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVZapJAAoJELp701BxlEWfuyoP/2OL4/AoRKjENAGaUOQzxkNj
-dr1PBwYqE15AR4CZdCjZuHhHKAhO1goKeIVNx6RtnfiOUVZZq00auH8/rvgLb8ZC
-6p6GUd+rD+0AdSPR3XpSewMYEE5hD8VwJ2DdttTA9l5QHMf0gaLRViPGISV5z92A
-h+caz6P5vSMcKUlsc4lxbKy/eqN6/yj7JLAjIoAsyTzV+plUkTNRCCt+QlnoNn/3
-A7UIR3yOdArbWALN31Bmf8cN/wDc6tUIF1yuCa3mGz4qH+fQejojzSFYpe04Hhdb
-ZBYU8bOqfxgGxPYi38SgJ6Wvy2o6ugsjn+xHuZ6vjkaYcwFlKX6ax8qe35o65tSh
-iEzEotpPEhyHat2Q+oCEAKhiLUb4R7H/Ae276PGhJ498M2CX3v5qBxYM1lA7DdpP
-I1HVPYl4cDNTXYz9286F+IuQtrvKju9cTdedHuE+5Wnkz5JTpsV7Kmyl1GhCqOQD
-7Ehfb37PDR2+ODKhj13tgS3HFJ4WZUAZOwmdgD9HGK3Wp1OfNjHW1WkRRGRwpzBj
-XmfVnRqSF4kxbh4jA/sBVLVIzz0foua7r/xU1F4Cg+FI66C98xua24MyyWvnJGUc
-XRmEjp7XAe7SVQDm8SH9obTQFUn37I71gkOPNAjRQcTyslT7gKe8dT3Nq+6GGkxO
-Ar2tvt3ywEha34gbewOx
-=Fycl
+iQEcBAEBCAAGBQJValz5AAoJEJGRpfGTSRu40ugH/3NblZwhISgStq/E6bVoXpu8
+0mi9h4OJmG8jLvmEF4pbQvU1RgqfQjMvH1TvdiM7KyHSj5bb8EFwaeGnzetE+euU
+pG9MOFXKNZZmnKwK861yfXhcg++NO25FK8+9F15MxaH6fjCy4zrlBVBhYOgVBL2k
+FB4cxLYmGLM4xWuk0c1OBVwRYgOATaZB0F7jyR96yErhB6ZJNdWyBskDqOmlImHC
+CEaGaOJCpxqmGssynvVKigeDW5DWdXHfANh7AZVPxC3VXarKL/nk2zClQ79Bmbs0
+ZJEEYaYbFDJa9y4YSu899kvWPEgVx5oc5oRKCGPBg46VBLXbizj8NOALQm741ic=
+=Vuxv
 -----END PGP SIGNATURE-----
