@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/javatoolkit
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/javatoolkit/ChangeLog,v 1.80 2015/05/27 11:28:08 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/javatoolkit/ChangeLog,v 1.81 2015/05/31 00:59:34 monsieurp Exp $
+
+  31 May 2015; Patrice Clement <monsieurp@gentoo.org>
+  -javatoolkit-0.3.0-r4.ebuild, -javatoolkit-0.3.0-r6.ebuild:
+  Remove old.
 
   27 May 2015; Agostino Sarubbo <ago@gentoo.org> javatoolkit-0.3.0-r9.ebuild:
   Stable for x86, wrt bug #529560
